--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "AppSettings": {    
+        "AdminFullName": "Admin",
+        "AdminUsername": "admin",
+        "AdminPassword": "123456",
+        "AdminEmail": "goksu-bunyamin@hotmail.com"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
